# oat-compiler-typechecker

./: LICENSE  Makefile  README.md  project.opam
.github/workflows/: grading.yml
code/: frontend.ml  gradedtests.ml  sp20_tests.ml  studenttests.ml  typechecker.ml
hw4programs/sp20_tests/: ackermann.oat  bfinterp.oat  bfs.oat  bit_division.oat  bubblesort.oat  capitalize.oat  collatz.oat  countsort.oat  crt.oat  det3.oat  dioph.oat  editdistance.oat  flood.oat  gausselim.oat  knapsack.oat  ltod.oat  ncr.oat  partition.oat  quickselect.oat  radixsort.oat  secondLargest.oat  slowsort.oat
hw4programs/ysc3208_2020/: pancake_sort.oat
hw5programs/: dp_product_except_self.oat  reverse_sll.oat
main/: dune  main.ml
